force-app/main/default/objects/Service_Info__c/Service_Info__c.object-meta.xml
<CustomObject>
    <description>Stores configuration data for Elevate services.</description>
    <label>Service Info</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Service Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>