force-app/main/default/objects/Service_Info__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>The name of a piece of configuration data from Elevate. It&#39;s associated value is stored in the Value__c field.</description>
    <inlineHelpText>The name of a piece of configuration data from Elevate. It&#39;s associated value is stored in the Value__c field.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>