force-app/main/default/objects/Service_Info__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>The name of the Elevate service the Key and Value are associated with.</description>
    <inlineHelpText>The name of the Elevate service the Key and Value are associated with.</inlineHelpText>
    <label>Service</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>