force-app/main/default/objects/Service_Info__c/fields/Service_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Key__c</fullName>
    <description>The combination of the Service and the Key value, delimited by &quot;::&quot;. This field is an external ID, used for upserting.</description>
    <externalId>true</externalId>
    <inlineHelpText>The combination of the Service and the Key value, delimited by &quot;::&quot;. This field is an external ID, used for upserting.</inlineHelpText>
    <label>Service Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>