force-app/main/default/objects/Service_Info__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value of a piece of configuration data from Elevate. It&#39;s associated name is stored in the key__c field.</description>
    <inlineHelpText>The value of a piece of configuration data from Elevate. It&#39;s associated name is stored in the key__c field.</inlineHelpText>
    <label>Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>